# ogl-experiments

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: colorrect.fs.glsl  colorrect.vs.glsl  image.fs.glsl  image.vs.glsl  text.vs  webgl.ColorFragmentShader.glsl  webgl.TransformVertexShader.glsl  webgl.colorrect.fs.glsl  webgl.colorrect.vs.glsl  webgl.image.fs.glsl  webgl.image.vs.glsl  webgl.model_loading.vs.glsl  webgl.text.fs.glsl  webgl.text.vs.glsl
cmake/: ogl.cmake
demos/: CMakeLists.txt
demos/animation_1/: CMakeLists.txt  main.cpp
demos/cube_1/: CMakeLists.txt  main.cpp
demos/cube_2/: CMakeLists.txt  main.cpp
demos/cube_3/: CMakeLists.txt  main.cpp
demos/input_1/: CMakeLists.txt  main.cpp
demos/layout_1/: CMakeLists.txt  main.cpp
demos/menu_1/: CMakeLists.txt  main.cpp
demos/model_1/: CMakeLists.txt  main.cpp
demos/offscreen_1/: CMakeLists.txt  main.cpp
demos/offscreen_2/: CMakeLists.txt  main.cpp
demos/text_1/: CMakeLists.txt  main.cpp
demos/triangle_1/: CMakeLists.txt  main.cpp
demos/triangle_2/: CMakeLists.txt  main.cpp
demos/triangle_3/: CMakeLists.txt  main.cpp
demos/tween_1/: CMakeLists.txt  main.cpp
demos/tween_2/: CMakeLists.txt  main.cpp
include/framework/: camera.h  canvaselement.h  color.h  colorrect.h  filesystem.h  framework.h  gl.h  i2d.h  image.h  isubsystem.h  mesh.h  model.h  shader.h  shader_m.h  shaders.h  stage.h  text.h  tween.h
include/framework/GL/: attributes.h  buffer.h  resource.h  shader.h  texture.h
src/framework/: CMakeLists.txt  canvaselement.cpp  color.cpp  colorrect.cpp  filesystem.cpp  image.cpp  mesh.cpp  model.cpp  shader.cpp  shaders.cpp  stage.cpp  text.cpp  tween.cpp
src/framework/GL/: attributes.cpp  buffer.cpp  shader.cpp  texture.cpp
src/triangle_1/: Makefile  main.cpp
src/triangle_2/: main.cpp
